# first-prize-osk2024-trustos

./: .gitignore  Makefile  README.md  board.sh  busybox  busybox_unstripped  disk.img.REMOVED.git-id  fat32.img.REMOVED.git-id  kernel-qemu  rust-toolchain.toml
busyb0x/: .gitignore  Config.in  compile_commands.json
doc/: cyclictest.md  iozone.md  libc-bench.md  libc_test.md  lmbench.md  ltp.md  unixbench.md  上板.md  设计文档.md
doc/trust-os/: LICENSE  README.md  appendix1_测例编译.md  appendix2_线上评测.md  chapter1_概述.md  chapter2_内存管理.md  chapter3_进程管理.md  chapter4_文件系统.md  chapter5_信号机制.md  chapter6_总结与展望.md
easy-fs/src/: lib.rs
ext4_rs/: Cargo.toml  create_img.sh
ext4_rs-refactor/: Cargo.toml  create_img.sh
ext4_rs/src/: consts.rs  ext4_error.rs  ext4_impl.rs  ext4_interface.rs  lib.rs
fat32_fs/: Cargo.toml  create_img.sh
fat32_fs/src/: block_cache.rs  chain.rs  console.rs  fat.rs  fat32_manager.rs  layout.rs  lib.rs  vfs.rs
final_tests/: .gitignore  Makefile  README.md  test_all_1stage.sh
final_tests/UnixBench/: Makefile
final_tests/libc-bench/: main.c
final_tests/libc-test/: Makefile  entry-static.asm
final_tests/rt-tests/: Makefile
final_tests/sdcard/: busybox  busybox_cmd.txt  iozone  libc-bench  libctest_testcode.sh  lmbench_testcode.sh  ltp_count.sh  ltp_testcode.sh  lua  netperf  netserver  run-static.sh  splice-test-1  splice-test-2  splice-test-3  splice-test-4  splice-test-5  test-ltp.sh  time-test  unixbench_fortest.sh
final_tests/time-test/: time-test.c
final_tests/true/: Makefile  true
lwext4_rust/: Cargo.toml  create_img.sh  create_testimg.sh  ext4.img  ext4.img.REMOVED.git-id
lwext4_rust/c/lwext4/: CMakeLists.txt
lwext4_rust/c/lwext4/include/: ext4.h
lwext4_rust/c/lwext4/src/: ext4.c  ext4_inode.c
lwext4_rust/examples/src/: ext4fs.rs
lwext4_rust/src/: bindings.rs  blockdev.rs  file.rs
os/: Cargo.toml  Makefile  debug.S  quick.sh  rustc-ice-2024-03-09T06:29:19.677834365Z-3037.txt  rustc-ice-2024-03-10T03:31:52.702751868Z-3156.txt  rustc-ice-2024-03-10T09:02:55.281120652Z-3230.txt  rustc-ice-2024-03-10T09:02:56.610290995Z-3382.txt
os/.cargo/: config
os/src/: console.rs  entry.asm  logger.rs  main.rs  sbi.rs  timer.rs
os/src/boards/: mod.rs  qemu.rs  vf2.rs
os/src/config/: board.rs  mm.rs  mod.rs  processor.rs  sync.rs
os/src/drivers/: device.rs  disk.rs  mod.rs  ramdisk.rs  sdcard.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/drivers/vf2/: mod.rs
os/src/drivers/virtio/: blk.rs  mod.rs
os/src/fs/: devfs.rs  dirent.rs  fsidx.rs  fstruct.rs  inode.rs  mod.rs  mount.rs  pipe.rs  preload.S  preload_vf2.S  stat.rs  stdio.rs
os/src/fs/ext4/: inode.rs  mod.rs  sb.rs
os/src/fs/ext4_lw/: inode.rs  mod.rs  sb.rs
os/src/fs/ext4_re/: inode.rs  mod.rs  sb.rs
os/src/fs/fat32/: inode.rs  mod.rs  sb.rs
os/src/fs/net/: mod.rs  simple_net.rs
os/src/fs/vfs/: inode.rs  mod.rs
os/src/mm/: address.rs  frame_allocator.rs  group.rs  heap_allocator.rs  map_area.rs  memory_set.rs  mod.rs  page_fault_handler.rs  page_table.rs  shm.rs
os/src/signal/: mod.rs  pending.rs  sigact.rs  signal.rs
os/src/sync/: interrupt.rs  mod.rs  up.rs
os/src/syscall/: fs.rs  memory.rs  mod.rs  net.rs  options.rs  process.rs  signal.rs  time.rs
os/src/task/: aux.rs  context.rs  futex.rs  manager.rs  mod.rs  pid.rs  processor.rs  sysinfo.rs  task.rs  tid.rs
os/src/trap/: context.rs  mod.rs  trap.S
os/src/utils/: command.rs  error.rs  mod.rs  string.rs
pre_ctests/: CMakeLists.txt
riscv64/: brk  chdir  clone  close  dup  dup2  execve  exit  fork  fstat  getcwd  getdents  getpid  getppid  gettimeofday  mkdir_  mmap  mount  munmap  open  openat  pipe  read  sleep  test_echo  times  umount  uname  unlink  wait  waitpid  write  yield
simple-fat32/: Cargo.toml  add_img.sh  create_img.sh  disk.img.REMOVED.git-id  fat32.img.REMOVED.git-id
simple-fat32/src/: block_cache.rs  block_dev.rs  console.rs  fat32_manager.rs  layout.rs  lib.rs  (+1 more)
test_scripts/: wzytest.sh
testsuits-for-oskernel/: .gitignore
user/: Cargo.toml  Makefile
(+63 files in other folders)
